tests/golden/lib/espejote/espejote/10_kustomize/espejote/admissionregistration.k8s.io_v1_validatingwebhookconfiguration_espejote-dynamic-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: syn-espejote/espejote-serving-cert
  name: espejote-dynamic-webhook
webhooks: []
