tests/golden/lib/espejote/espejote/10_kustomize/espejote/rbac.authorization.k8s.io_v1_clusterrole_espejote-metrics-reader.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: espejote-metrics-reader
rules:
- nonResourceURLs:
  - /metrics
  verbs:
  - get
