tests/golden/lib/espejote/espejote/10_kustomize/espejote/rbac.authorization.k8s.io_v1_clusterrolebinding_espejote-manager-rolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  labels:
    app.kubernetes.io/component: rbac
    app.kubernetes.io/created-by: espejote
    app.kubernetes.io/instance: manager-rolebinding
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: clusterrolebinding
    app.kubernetes.io/part-of: espejote
  name: espejote-manager-rolebinding
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: espejote-manager-role
subjects:
- kind: ServiceAccount
  name: espejote-controller-manager
  namespace: syn-espejote
