tests/golden/lib/espejote/espejote/10_kustomize/espejote/rbac.authorization.k8s.io_v1_rolebinding_espejote-leader-election-rolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  labels:
    app.kubernetes.io/component: rbac
    app.kubernetes.io/created-by: espejote
    app.kubernetes.io/instance: leader-election-rolebinding
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: rolebinding
    app.kubernetes.io/part-of: espejote
  name: espejote-leader-election-rolebinding
  namespace: syn-espejote
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: espejote-leader-election-role
subjects:
- kind: ServiceAccount
  name: espejote-controller-manager
  namespace: syn-espejote
