tests/golden/lib/espejote/espejote/10_kustomize/espejote/v1_service_espejote-controller-manager-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: espejote
    control-plane: controller-manager
  name: espejote-controller-manager-metrics-service
  namespace: syn-espejote
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app.kubernetes.io/name: espejote
    control-plane: controller-manager
