tests/golden/lib/espejote/espejote/10_kustomize/espejote/v1_service_espejote-webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: espejote
  name: espejote-webhook-service
  namespace: syn-espejote
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    app.kubernetes.io/name: espejote
    control-plane: controller-manager
